--- a/index.html
+++ b/index.html
@@ -203,8 +203,191 @@
         <!-- Practice -->
         <div class="container" id="practice">
           <div class="title">Practice</div>
-          <div class="content"></div>
-        </div>
+          <div class="content">
+<style>  
+    .container {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      margin-bottom: 20px;
+    }
+
+    .box, .output-box {
+      border: 2px dashed #ccc;
+      width: 300px;
+      height: 200px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      margin: 10px;
+      position: relative;
+      padding: 10px;
+      overflow-y: auto;
+      background: #f9f9f9;
+    }
+
+    .box img {
+      max-width: 100%;
+      max-height: 100%;
+    }
+
+    input[type="file"] {
+      margin-top: 10px;
+    }
+
+    button {
+      margin: 10px;
+      padding: 10px 20px;
+      font-size: 16px;
+    }
+
+    .result {
+      font-size: 20px;
+      font-weight: bold;
+      color: green;
+      margin-top: 20px;
+    }
+
+    h3 {
+      margin-bottom: 5px;
+    }
+  </style>
+</head>
+<body>
+
+  <h2>OCR + NLP Based Image Text Similarity</h2>
+
+  <!-- Upload Section -->
+  <div class="container">
+    <div class="box">
+      <h3>Image 1</h3>
+      <img id="preview1" style="display:none;">
+      <input type="file" id="image1" accept="image/*">
+    </div>
+    <div class="box">
+      <h3>Image 2</h3>
+      <img id="preview2" style="display:none;">
+      <input type="file" id="image2" accept="image/*">
+    </div>
+  </div>
+
+  <!-- Buttons -->
+  <div>
+    <button onclick="extractText()">1️⃣ Extract Text</button>
+    <button onclick="preprocessText()">2️⃣ Preprocess Text</button>
+    <button onclick="calculateSimilarity()">3️⃣ Calculate Similarity</button>
+  </div>
+
+  <!-- Extracted Text Boxes -->
+  <div class="container">
+    <div class="output-box" id="text1">Extracted Text 1</div>
+    <div class="output-box" id="text2">Extracted Text 2</div>
+  </div>
+
+  <!-- Preprocessed Text Boxes -->
+  <div class="container">
+    <div class="output-box" id="pre1">Preprocessed Text 1</div>
+    <div class="output-box" id="pre2">Preprocessed Text 2</div>
+  </div>
+
+  <!-- Similarity Result -->
+  <div class="result" id="similarityResult">Similarity: Not Calculated</div>
+
+  <script>
+    const imageInputs = [document.getElementById('image1'), document.getElementById('image2')];
+    const previews = [document.getElementById('preview1'), document.getElementById('preview2')];
+    const texts = [document.getElementById('text1'), document.getElementById('text2')];
+    const pretexts = [document.getElementById('pre1'), document.getElementById('pre2')];
+    const base64Images = [null, null];  // store Base64 strings
+    const extractedText = ["", ""];
+    const processedText = ["", ""];
+
+    imageInputs.forEach((input, index) => {
+      input.addEventListener('change', function () {
+        const file = this.files[0];
+        if (file) {
+          const reader = new FileReader();
+          reader.onload = function (e) {
+            previews[index].src = e.target.result;
+            previews[index].style.display = 'block';
+            base64Images[index] = e.target.result.replace(/^data:image\/(png|jpg|jpeg);base64,/, '');
+          };
+          reader.readAsDataURL(file);
+        }
+      });
+    });
+
+    async function extractText() {
+      const apiKey = 'K88181478588957'; // Replace with your actual OCR API key
+
+      for (let i = 0; i < 2; i++) {
+        if (!base64Images[i]) {
+          texts[i].innerText = 'No image selected';
+          continue;
+        }
+
+        texts[i].innerText = 'Extracting...';
+        pretexts[i].innerText = '';
+        document.getElementById('similarityResult').innerText = 'Similarity: Not Calculated';
+
+        const formData = new FormData();
+        formData.append('base64Image', 'data:image/jpeg;base64,' + base64Images[i]);
+        formData.append('language', 'eng');
+        formData.append('apikey', apiKey);
+        formData.append('OCREngine', 2);
+
+        try {
+          const response = await fetch('https://api.ocr.space/parse/image', {
+            method: 'POST',
+            body: formData
+          });
+
+          const result = await response.json();
+          const parsedText = result.ParsedResults?.[0]?.ParsedText || "No text found.";
+          texts[i].innerText = parsedText;
+          extractedText[i] = parsedText;
+        } catch (error) {
+          texts[i].innerText = 'Error during OCR';
+        }
+      }
+    }
+
+    function preprocessText() {
+      const stopwords = new Set(["the", "is", "in", "on", "and", "a", "an", "of", "to", "it", "this", "that"]);
+      const punctuation = new Set("!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~".split(""));
+
+      for (let i = 0; i < 2; i++) {
+        let text = extractedText[i].toLowerCase().replace(/[→V]/g, '').trim();
+        const tokens = text.split(/\s+/).filter(w => !stopwords.has(w) && !punctuation.has(w));
+        const result = tokens.join(" ");
+        pretexts[i].innerText = result;
+        processedText[i] = result;
+      }
+    }
+
+    function calculateSimilarity() {
+      if (!processedText[0] || !processedText[1]) {
+        alert("Please preprocess the text first.");
+        return;
+      }
+
+      const tokenize = text => text.split(" ");
+      const words1 = tokenize(processedText[0]);
+      const words2 = tokenize(processedText[1]);
+      const allWords = [...new Set([...words1, ...words2])];
+
+      const vec = words => allWords.map(w => words.filter(x => x === w).length);
+      const dot = (a, b) => a.reduce((sum, val, i) => sum + val * b[i], 0);
+      const mag = v => Math.sqrt(v.reduce((sum, val) => sum + val * val, 0));
+
+      const v1 = vec(words1);
+      const v2 = vec(words2);
+      const sim = (dot(v1, v2) / (mag(v1) * mag(v2))) || 0;
+
+      document.getElementById("similarityResult").innerText = `Similarity: ${(sim * 100).toFixed(2)}%`;
+    }
+  </script>
 
         <!-- Results -->
         <div class="container" id="result">
