--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
           <div class="title">Practice</div>
           <div class="content">
 <style>  
-    .container {
+    .contain {
       display: flex;
       justify-content: center;
       flex-wrap: wrap;
@@ -213,85 +213,126 @@
     }
 
     .box, .output-box {
-      border: 2px dashed #ccc;
-      width: 300px;
-      height: 200px;
+      border: 2px dashed #8e8e8e;
+      width: 320px;
+      height: 220px;
       display: flex;
       align-items: center;
       justify-content: center;
       flex-direction: column;
       margin: 10px;
-      position: relative;
       padding: 10px;
-      overflow-y: auto;
-      background: #f9f9f9;
+      background: #ffffff;
+      border-radius: 10px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      transition: transform 0.2s;
+      position: relative;
+      cursor: pointer;
+    }
+
+    .output-box {
+      overflow: auto;
+      text-align: left;
+      padding: 30px;
+      box-sizing: border-box;
+    }
+
+    .box.dragover {
+      background-color: #e0e7ff;
+    }
+
+    .box:hover, .output-box:hover {
+      transform: scale(1.02);
     }
 
     .box img {
       max-width: 100%;
       max-height: 100%;
+      object-fit: contain;
+      border-radius: 5px;
     }
 
-    input[type="file"] {
+    .upload-content {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center;
+    }
+
+    .upload-icon {
+      font-size: 36px;
+      color: #888;
+    }
+
+    .box input[type="file"] {
       margin-top: 10px;
     }
 
     button {
       margin: 10px;
-      padding: 10px 20px;
+      padding: 12px 24px;
       font-size: 16px;
+      background-color: #007bff;
+      color: white;
+      border: none;
+      border-radius: 6px;
+      cursor: pointer;
+      transition: background-color 0.3s;
+    }
+
+    button:hover {
+      background-color: #0056b3;
     }
 
     .result {
-      font-size: 20px;
+      font-size: 22px;
       font-weight: bold;
-      color: green;
+      color: #28a745;
       margin-top: 20px;
     }
 
     h3 {
       margin-bottom: 5px;
+      color: #444;
     }
   </style>
-</head>
-<body>
 
-  <h2>OCR + NLP Based Image Text Similarity</h2>
 
-  <!-- Upload Section -->
-  <div class="container">
-    <div class="box">
-      <h3>Image 1</h3>
+  <div class="contain">
+    <div class="box" id="box1">
+      <div class="upload-content" id="upload-content1">
+        <div class="upload-icon">📤</div>
+        <h3 id="label1">Upload Image 1</h3>
+        <input type="file" id="image1" accept="image/*" style="display: none;">
+      </div>
       <img id="preview1" style="display:none;">
-      <input type="file" id="image1" accept="image/*">
     </div>
-    <div class="box">
-      <h3>Image 2</h3>
+    <div class="box" id="box2">
+      <div class="upload-content" id="upload-content2">
+        <div class="upload-icon">📤</div>
+        <h3 id="label2">Upload Image 2</h3>
+        <input type="file" id="image2" accept="image/*" style="display: none;">
+      </div>
       <img id="preview2" style="display:none;">
-      <input type="file" id="image2" accept="image/*">
     </div>
   </div>
 
-  <!-- Buttons -->
   <div>
     <button onclick="extractText()">1️⃣ Extract Text</button>
     <button onclick="preprocessText()">2️⃣ Preprocess Text</button>
     <button onclick="calculateSimilarity()">3️⃣ Calculate Similarity</button>
   </div>
 
-  <!-- Extracted Text Boxes -->
-  <div class="container">
+  <div class="contain">
     <div class="output-box" id="text1">Extracted Text 1</div>
     <div class="output-box" id="text2">Extracted Text 2</div>
   </div>
 
-  <!-- Preprocessed Text Boxes -->
-  <div class="container">
+  <div class="contain">
     <div class="output-box" id="pre1">Preprocessed Text 1</div>
     <div class="output-box" id="pre2">Preprocessed Text 2</div>
   </div>
 
-  <!-- Similarity Result -->
   <div class="result" id="similarityResult">Similarity: Not Calculated</div>
 
   <script>
@@ -299,9 +340,41 @@
     const previews = [document.getElementById('preview1'), document.getElementById('preview2')];
     const texts = [document.getElementById('text1'), document.getElementById('text2')];
     const pretexts = [document.getElementById('pre1'), document.getElementById('pre2')];
-    const base64Images = [null, null];  // store Base64 strings
+    const base64Images = [null, null];
     const extractedText = ["", ""];
     const processedText = ["", ""];
+    const labels = [document.getElementById('label1'), document.getElementById('label2')];
+    const uploadContents = [document.getElementById('upload-content1'), document.getElementById('upload-content2')];
+    const boxes = [document.getElementById('box1'), document.getElementById('box2')];
+
+    boxes.forEach((box, index) => {
+      box.addEventListener('click', () => imageInputs[index].click());
+
+      box.addEventListener('dragover', (e) => {
+        e.preventDefault();
+        box.classList.add('dragover');
+      });
+
+      box.addEventListener('dragleave', () => {
+        box.classList.remove('dragover');
+      });
+
+      box.addEventListener('drop', (e) => {
+        e.preventDefault();
+        box.classList.remove('dragover');
+        const file = e.dataTransfer.files[0];
+        if (file && file.type.startsWith('image/')) {
+          const reader = new FileReader();
+          reader.onload = function (event) {
+            previews[index].src = event.target.result;
+            previews[index].style.display = 'block';
+            base64Images[index] = event.target.result.replace(/^data:image\/(png|jpg|jpeg);base64,/, '');
+            uploadContents[index].style.display = 'none';
+          };
+          reader.readAsDataURL(file);
+        }
+      });
+    });
 
     imageInputs.forEach((input, index) => {
       input.addEventListener('change', function () {
@@ -312,14 +385,19 @@
             previews[index].src = e.target.result;
             previews[index].style.display = 'block';
             base64Images[index] = e.target.result.replace(/^data:image\/(png|jpg|jpeg);base64,/, '');
+            uploadContents[index].style.display = 'none';
           };
           reader.readAsDataURL(file);
         }
       });
+
+      previews[index].addEventListener('click', () => {
+        imageInputs[index].click();
+      });
     });
 
     async function extractText() {
-      const apiKey = 'K88181478588957'; // Replace with your actual OCR API key
+      const apiKey = 'K88181478588957';
 
       for (let i = 0; i < 2; i++) {
         if (!base64Images[i]) {
@@ -358,7 +436,7 @@
       const punctuation = new Set("!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~".split(""));
 
       for (let i = 0; i < 2; i++) {
-        let text = extractedText[i].toLowerCase().replace(/[→V]/g, '').trim();
+        let text = extractedText[i].toLowerCase().replace(/[\u2192V]/g, '').trim();
         const tokens = text.split(/\s+/).filter(w => !stopwords.has(w) && !punctuation.has(w));
         const result = tokens.join(" ");
         pretexts[i].innerText = result;
