--- a/index.html
+++ b/index.html
@@ -228,13 +228,16 @@
       transition: transform 0.2s;
       position: relative;
       cursor: pointer;
+      box-sizing: border-box;
     }
 
     .output-box {
-      overflow: auto;
-      text-align: left;
-      padding: 30px;
+      overflow-y: auto;
+      overflow-x: hidden;
+      text-align: center;
+      padding: 24px 14px 14px 14px;
       box-sizing: border-box;
+      white-space: pre-wrap;
     }
 
     .box.dragover {
@@ -269,7 +272,7 @@
     }
 
     button {
-      margin: 10px;
+      margin: 10px auto;
       padding: 12px 24px;
       font-size: 16px;
       background-color: #007bff;
@@ -278,17 +281,27 @@
       border-radius: 6px;
       cursor: pointer;
       transition: background-color 0.3s;
+      display: block;
     }
 
     button:hover {
       background-color: #0056b3;
     }
 
-    .result {
-      font-size: 22px;
+    .scorecard {
+      margin-top: 30px;
+      padding: 20px;
+      background-color: #ffffff;
+      border: 2px solid #28a745;
+      border-radius: 10px;
+      width: 300px;
+      margin-left: auto;
+      margin-right: auto;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      font-size: 19px;
       font-weight: bold;
       color: #28a745;
-      margin-top: 20px;
+      text-align: center;
     }
 
     h3 {
@@ -296,7 +309,6 @@
       color: #444;
     }
   </style>
-
 
   <div class="contain">
     <div class="box" id="box1">
@@ -317,114 +329,102 @@
     </div>
   </div>
 
-  <div>
-    <button onclick="extractText()">1️⃣ Extract Text</button>
-    <button onclick="preprocessText()">2️⃣ Preprocess Text</button>
-    <button onclick="calculateSimilarity()">3️⃣ Calculate Similarity</button>
-  </div>
+  <button onclick="extractText()">Extract Text</button>
 
   <div class="contain">
     <div class="output-box" id="text1">Extracted Text 1</div>
     <div class="output-box" id="text2">Extracted Text 2</div>
   </div>
 
+  <button onclick="preprocessText()">Preprocess Text</button>
+
   <div class="contain">
     <div class="output-box" id="pre1">Preprocessed Text 1</div>
     <div class="output-box" id="pre2">Preprocessed Text 2</div>
   </div>
 
-  <div class="result" id="similarityResult">Similarity: Not Calculated</div>
+  <button onclick="calculateSimilarity()">Calculate Similarity</button>
+
+  <div class="scorecard" id="similarityResult">Similarity: Not Calculated</div>
 
   <script>
     const imageInputs = [document.getElementById('image1'), document.getElementById('image2')];
     const previews = [document.getElementById('preview1'), document.getElementById('preview2')];
-    const texts = [document.getElementById('text1'), document.getElementById('text2')];
-    const pretexts = [document.getElementById('pre1'), document.getElementById('pre2')];
-    const base64Images = [null, null];
-    const extractedText = ["", ""];
-    const processedText = ["", ""];
-    const labels = [document.getElementById('label1'), document.getElementById('label2')];
     const uploadContents = [document.getElementById('upload-content1'), document.getElementById('upload-content2')];
-    const boxes = [document.getElementById('box1'), document.getElementById('box2')];
-
-    boxes.forEach((box, index) => {
-      box.addEventListener('click', () => imageInputs[index].click());
-
-      box.addEventListener('dragover', (e) => {
-        e.preventDefault();
-        box.classList.add('dragover');
-      });
-
-      box.addEventListener('dragleave', () => {
-        box.classList.remove('dragover');
-      });
-
-      box.addEventListener('drop', (e) => {
-        e.preventDefault();
-        box.classList.remove('dragover');
-        const file = e.dataTransfer.files[0];
-        if (file && file.type.startsWith('image/')) {
-          const reader = new FileReader();
-          reader.onload = function (event) {
-            previews[index].src = event.target.result;
-            previews[index].style.display = 'block';
-            base64Images[index] = event.target.result.replace(/^data:image\/(png|jpg|jpeg);base64,/, '');
-            uploadContents[index].style.display = 'none';
-          };
-          reader.readAsDataURL(file);
-        }
-      });
-    });
+    const texts = [document.getElementById('text1'), document.getElementById('text2')];
+    const preprocessed = [document.getElementById('pre1'), document.getElementById('pre2')];
+    const base64Images = [null, null];
+    const extractedTexts = ["", ""];
 
     imageInputs.forEach((input, index) => {
+      const box = document.getElementById('box' + (index + 1));
+
+      const handleImage = file => {
+        const reader = new FileReader();
+        reader.onload = function (e) {
+          previews[index].src = e.target.result;
+          previews[index].style.display = 'block';
+          uploadContents[index].style.display = 'none';
+          base64Images[index] = e.target.result.replace(/^data:image\/(png|jpg|jpeg);base64,/, '');
+        };
+        reader.readAsDataURL(file);
+      };
+
       input.addEventListener('change', function () {
-        const file = this.files[0];
-        if (file) {
-          const reader = new FileReader();
-          reader.onload = function (e) {
-            previews[index].src = e.target.result;
-            previews[index].style.display = 'block';
-            base64Images[index] = e.target.result.replace(/^data:image\/(png|jpg|jpeg);base64,/, '');
-            uploadContents[index].style.display = 'none';
-          };
-          reader.readAsDataURL(file);
+        if (this.files[0]) {
+          handleImage(this.files[0]);
         }
       });
 
-      previews[index].addEventListener('click', () => {
-        imageInputs[index].click();
+      ['dragenter', 'dragover'].forEach(eventName => {
+        box.addEventListener(eventName, e => {
+          e.preventDefault();
+          box.classList.add('dragover');
+        });
+      });
+
+      ['dragleave', 'drop'].forEach(eventName => {
+        box.addEventListener(eventName, e => {
+          e.preventDefault();
+          box.classList.remove('dragover');
+        });
+      });
+
+      box.addEventListener('drop', e => {
+        const file = e.dataTransfer.files[0];
+        if (file && file.type.startsWith('image/')) {
+          handleImage(file);
+        }
+      });
+
+      box.addEventListener('click', () => {
+        input.value = ''; // clear previous file to avoid double trigger
+        input.click();
       });
     });
 
     async function extractText() {
       const apiKey = 'K88181478588957';
-
       for (let i = 0; i < 2; i++) {
         if (!base64Images[i]) {
           texts[i].innerText = 'No image selected';
           continue;
         }
-
         texts[i].innerText = 'Extracting...';
-        pretexts[i].innerText = '';
-        document.getElementById('similarityResult').innerText = 'Similarity: Not Calculated';
-
         const formData = new FormData();
         formData.append('base64Image', 'data:image/jpeg;base64,' + base64Images[i]);
         formData.append('language', 'eng');
         formData.append('apikey', apiKey);
         formData.append('OCREngine', 2);
-
         try {
           const response = await fetch('https://api.ocr.space/parse/image', {
             method: 'POST',
             body: formData
           });
-
           const result = await response.json();
           const parsedText = result.ParsedResults?.[0]?.ParsedText || "No text found.";
+          extractedTexts[i] = parsedText;
           texts[i].innerText = parsedText;
-          extractedText[i] = parsedText;
         } catch (error) {
           texts[i].innerText = 'Error during OCR';
         }
@@ -432,40 +432,57 @@
     }
 
     function preprocessText() {
-      const stopwords = new Set(["the", "is", "in", "on", "and", "a", "an", "of", "to", "it", "this", "that"]);
-      const punctuation = new Set("!\"#$%&'()*+,-./:;<=>?@[\\]^_`{|}~".split(""));
-
       for (let i = 0; i < 2; i++) {
-        let text = extractedText[i].toLowerCase().replace(/[\u2192V]/g, '').trim();
-        const tokens = text.split(/\s+/).filter(w => !stopwords.has(w) && !punctuation.has(w));
-        const result = tokens.join(" ");
-        pretexts[i].innerText = result;
-        processedText[i] = result;
+        let text = extractedTexts[i].toLowerCase();
+        text = text.replace(/[→V]/g, '').trim();
+        const tokens = text.split(/\s+/);
+        const stopwords = new Set(["i", "me", "my", "myself", "we", "our", "ours", "ourselves", "you", "your", "yours", "yourself", "yourselves",
+"he", "him", "his", "himself", "she", "her", "hers", "herself", "it", "its", "itself", "they", "them", "their",
+"theirs", "themselves", "what", "which", "who", "whom", "this", "that", "these", "those", "am", "is", "are", "was",
+"were", "be", "been", "being", "have", "has", "had", "having", "do", "does", "did", "doing", "a", "an", "the", "and",
+"but", "if", "or", "because", "as", "until", "while", "of", "at", "by", "for", "with", "about", "against", "between",
+"into", "through", "during", "before", "after", "above", "below", "to", "from", "up", "down", "in", "out", "on", "off",
+"over", "under", "again", "further", "then", "once", "here", "there", "when", "where", "why", "how", "all", "any",
+"both", "each", "few", "more", "most", "other", "some", "such", "no", "nor", "not", "only", "own", "same", "so",
+"than", "too", "very", "s", "t", "can", "will", "just", "don", "should", "now"]);
+        const punctuations = new Set(["!", "\"", "#", "$", "%", "&", "'", "(", ")", "*", "+", ",", "-", ".", "/", ":", ";", "<", "=", ">", "?", "@", "[", "\\", "]", "^", "_", "`", "{", "|", "}", "~"]);
+        const filtered = tokens.filter(token => !stopwords.has(token) && !punctuations.has(token));
+        preprocessed[i].innerText = filtered.join(' ');
       }
     }
 
-    function calculateSimilarity() {
-      if (!processedText[0] || !processedText[1]) {
-        alert("Please preprocess the text first.");
-        return;
-      }
+function calculateSimilarity() {
+  const docs = [preprocessed[0].innerText, preprocessed[1].innerText];
+  const tokenizedDocs = docs.map(doc => doc.split(/\s+/));
+  const allWords = Array.from(new Set(tokenizedDocs.flat()));
 
-      const tokenize = text => text.split(" ");
-      const words1 = tokenize(processedText[0]);
-      const words2 = tokenize(processedText[1]);
-      const allWords = [...new Set([...words1, ...words2])];
+  const tfidfVectors = tokenizedDocs.map(words => {
+    return allWords.map(word => {
+      const tf = words.filter(w => w === word).length / words.length;
 
-      const vec = words => allWords.map(w => words.filter(x => x === w).length);
-      const dot = (a, b) => a.reduce((sum, val, i) => sum + val * b[i], 0);
-      const mag = v => Math.sqrt(v.reduce((sum, val) => sum + val * val, 0));
+      // Compute correct DF (word occurrence per document)
+      const df = tokenizedDocs.reduce((acc, docWords) => acc + (docWords.includes(word) ? 1 : 0), 0);
 
-      const v1 = vec(words1);
-      const v2 = vec(words2);
-      const sim = (dot(v1, v2) / (mag(v1) * mag(v2))) || 0;
+      // Smoothed IDF as used by scikit-learn
+      const idf = Math.log((1 + tokenizedDocs.length) / (1 + df)) + 1;
 
-      document.getElementById("similarityResult").innerText = `Similarity: ${(sim * 100).toFixed(2)}%`;
-    }
+      return tf * idf;
+    });
+  });
+
+  const dotProduct = tfidfVectors[0].reduce((sum, val, i) => sum + val * tfidfVectors[1][i], 0);
+  const magnitudeA = Math.sqrt(tfidfVectors[0].reduce((sum, val) => sum + val * val, 0));
+  const magnitudeB = Math.sqrt(tfidfVectors[1].reduce((sum, val) => sum + val * val, 0));
+  let similarity = dotProduct / (magnitudeA * magnitudeB);
+
+  if (isNaN(similarity)) similarity = 0;
+
+  document.getElementById('similarityResult').innerText = `Similarity: ${Math.round(similarity * 100)}%`;
+}
+
+
   </script>
+
 
         <!-- Results -->
         <div class="container" id="result">
