--- a/index.html
+++ b/index.html
@@ -459,20 +459,134 @@ if __name__ == "__main__":
                   This example demonstrates the full pipeline of the experiment using two sample images.
                   Each stage illustrates how the content is transformed from raw image data to a final similarity score.
                 </p><br>
-        <div><b>Step 1: Original Image Upload</b></div>
-        <p>The used is supposed to upload two images containing printed or handwritten text that needs to be extracted.</p>
-        <img src="path/to/image1.jpg" alt="Original Uploaded Image">
-      </div>
+                <p>
+                  The user is required to upload two images which are to be compared on the basis of the text contained in them.<br>
+                  Now consider the following two images are uploaded by the user:
+                </p>
+                <div class="image-row">
+                  <img src="images/CPU.png" alt="Image 1">
+                  <img src="images/computer_architecture.jpg" alt="Image 2">
+                </div>
 
-      <div class="step">
-        <h3>Step 2: OCR Processed Output</h3>
-        <p>This image shows the output after text extraction using OCR. You can explain the recognized text, highlight how preprocessing helped, and whether the OCR was accurate.</p>
-        <img src="path/to/image2.jpg" alt="OCR Output Image">
-      </div>
+                <div class="step">
+                <p><br>
+                  After clicking the <b>“Extract Text”</b> button, each image is sent to the <b>OCR.space API</b>. 
+                  The API processes the image and returns the detected text.
+                </p>
 
-      <p>Based on these images, explain how your application processes user-uploaded images and improves the quality of text extraction and similarity calculation.</p>
+                <p><b>Extracted Text from Image 1:</b></p>
+                <code>Input from\nDevice\nCentral Processing Unit\nControl Unit\nArithmetic/Logical Unit\nRegisters\nMemory Unit\nOutput from\nDevice</code><br><br>
+                <p><b>Extracted Text from Image 2:</b></p>
+                <code>Input Unit\nCPU\nControl Unit\nArithmetic\n& Logic Unit\nMemory Unit\nOutput Unit</code>
+                </div>
+
+                <div class="steps">
+                <p>
+                  Before comparing the extracted texts, preprocessing is essential to clean and standardize the content. 
+                  This step ensures that insignificant variations (like punctuation or casing) do not affect the similarity result.
+                </p>
+              
+                <div class="processing-step">After Lowercasing</div>
+                <div class="step-comparison">
+                  <div class="step-box">
+                    <p><b>Image 1:</b> <code>input from\ndevice\ncentral processing unit\ncontrol unit\narithmetic/logical unit\nregisters\nmemory unit\noutput from\ndevice</code></p>
+                  </div>
+                  <div class="step-box">
+                    <p><b>Image 2:</b> <code>input unit\ncpu\ncontrol unit\narithmetic\n& logic unit\nmemory unit\noutput unit</code></p>
+                  </div>
+                </div>
+
+                <div class="processing-step">After Punctuation Removal</div>
+                <div class="step-comparison">
+                  <div class="step-box">
+                    <p><b>Image 1:</b> <code>input from\ndevice\ncentral processing unit\ncontrol unit\narithmetic logical unit\nregisters\nmemory unit\noutput from\ndevice</code></p>
+                  </div>
+                  <div class="step-box">
+                    <p><b>Image 2:</b> <code>input unit\ncpu\ncontrol unit\narithmetic\nlogic unit\nmemory unit\noutput unit</code></p>
+                  </div>
+                </div>
+
+                <div class="processing-step">After Tokenization</div>
+                <div class="step-comparison">
+                  <div class="step-box">
+                    <p><b>Image 1:</b> <code>['input', 'from', 'device', 'central', 'processing', 'unit', 'control', 'unit', 'arithmetic', 'logical', 'unit', 'registers', 'memory', 'unit', 'output', 'from', 'device']</code></p>
+                  </div>
+                  <div class="step-box">
+                    <p><b>Image 2:</b> <code>['input', 'unit', 'cpu', 'control', 'unit', 'arithmetic', 'logic', 'unit', 'memory', 'unit', 'output', 'unit']</code></p>
+                  </div>
+                </div>
+
+                <div class="processing-step">After Stopword Removal</div>
+                <div class="step-comparison">
+                  <div class="step-box">
+                    <p><b>Image 1:</b> <code>input device central processing unit control unit arithmetic logical unit registers memory unit output device</code></p>
+                  </div>
+                  <div class="step-box">
+                    <p><b>Image 2:</b> <code>input unit cpu control unit arithmetic logic unit memory unit output unit</code></p>
+                  </div>
+                </div>
+
+                <div class="processing-step">After Lemmatization</div>
+                <div class="step-comparison">
+                  <div class="step-box">
+                    <p><b>Image 1:</b> <code>input device central process unit control unit arithmetic logical unit register memory unit output device</code></p>
+                  </div>
+                  <div class="step-box">
+                    <p><b>Image 2:</b> <code>input unit cpu control unit arithmetic logic unit memory unit output unit</code></p>
+                  </div>
+                </div>
+
+                <p><br><br>
+                  The cleaned tokens obtained after all preprocessing steps are now transformed into numerical vectors using <b>TF-IDF (Term Frequency – Inverse Document Frequency)</b>. 
+                  TF-IDF helps in assigning weights to words based on their importance — terms that are frequent in a document but rare across other documents are given more significance.
+                </p>
+
+                <p><br><b>TF-IDF Score Formula (simplified):</b></p>
+<pre><code>TF-IDF(t, d) = TF(t, d) × IDF(t)
+
+Where:
+- TF(t, d): Term Frequency – how many times term t appears in document d
+- IDF(t): Inverse Document Frequency = log[(N + 1) / (DF + 1)] + 1
+</code></pre>
+
+                <p><br>
+                  <i>Note:</i> You may notice a slight change in the formula of IDF compared to the traditional form.
+                  This version — <code>log((N + 1) / (DF + 1)) + 1</code> — is commonly used in implementations like <code>sklearn</code>'s <code>TfidfVectorizer</code> to prevent division-by-zero and stabilize the values when working with small datasets. Adding 1 to both numerator and denominator is known as <b>smoothing</b>, and it helps ensure more balanced weight distribution across rare and common terms.
+                </p><br>
+
+                <p>The following matrix shows the TF-IDF weights assigned to each term in Image 1 and Image 2 after vectorization:</p>
+                <div style="text-align: center;">
+                  <img src="images/TFIDF.png" alt="TF-IDF Matrix" style="max-width: 100%; height: auto; border: 1px solid #ccc; padding: 6px;">
+                </div><br>
+
+                <p>
+                  After converting the preprocessed text from both images into TF-IDF vectors, we compute the cosine similarity between them.
+                  Cosine Similarity Formula:
+                </p>
+                <pre><code>cos(θ) = (A · B) / (||A|| × ||B||)</code></pre>
+                <p>
+                  The result is presented in the form of a similarity matrix, where each element <code>(i, j)</code> represents the similarity between Document <code>i</code> and Document <code>j</code>. The matrix shown below is the actual cosine similarity matrix obtained in this case.
+                </p>
+                <div style="text-align: left; margin: 10px 0;">
+                <p><b>Cosine Similarity Matrix:</b></p>
+  <pre style="display: inline-block; background: #f8f8f8; padding: 12px; border-radius: 6px; border: 1px solid #ccc;">[[1.0       0.7073]
+ [0.7073    1.0]]</pre>
+                </div><br>
+
+                <p>
+                  The value <code>0.7073</code> indicates the similarity score between the two uploaded images.
+                </p>
+
+                <div class="result-box">
+                  <h2>Similarity Score: <span style="color: green;">70.73%</span></h2>
+                </div>
+
+
+              
+
+
+              </div>
             </div>
-          </div>
 
           <!-- Example 2 Tab Content -->
           <div class="transition-wrapper" id="example2Wrapper">
