--- a/index.html
+++ b/index.html
@@ -826,13 +826,8 @@ async function calculateSimilarity() {
         <div class="title">Quiz</div>
         <p id="question"></p>
         <div id="choices" class="choices"></div>
-        <button id="save-btn" class="save-button">Save</button>
-        <button id="next-btn" class="next-button" style="display: none">
-          Next
-        </button>
-        <button id="retake-btn" style="display: none">Retake Quiz</button>
-        <div id="quiz-report" style="display: none"></div>
-        <!-- Section to display quiz report -->
+          <button id="next-btn" class="next-button">Next</button>
+          <button id="retake-btn">Retake Quiz</button>
       </div>
 
       <!-- References -->
