--- a/index.html
+++ b/index.html
@@ -1011,10 +1011,16 @@ async function calculateSimilarity() {
         <div class="content">
           <ul class="ref-list">
             <li>
-              <span> refernce 1 </span>
+              <span><a href="https://ocr.space/ocrapi" rel="noopener" target="_blank">OCR.space API Documentation</a></span>
             </li>
             <li>
-              <span> refernce 2 </span>
+              <span><a href="https://www.nltk.org/" rel="noopener" target="_blank">NLTK Documentation</a></span>
+            </li>
+            <li>
+              <span><a href="https://scikit-learn.org/stable/modules/generated/sklearn.feature_extraction.text.TfidfVectorizer.html" rel="noopener" target="_blank">TF-IDF Documentation</a></span>
+            </li>
+            <li>
+              <span><a href="https://scikit-learn.org/stable/modules/generated/sklearn.metrics.pairwise.cosine_similarity.html" rel="noopener" target="_blank">Cosine Similarity Documentation</a></span>
             </li>
           </ul>
         </div>
@@ -1028,11 +1034,11 @@ async function calculateSimilarity() {
           <ul class="ref-list">
             <li>
               <a href="https://www.linkedin.com/in/kriti-misra-b6014a29b" rel="noopener" target="_blank"><span>Kriti
-                  Misra, BSc (Hons) Computer Science (2024-25)</span></a>
+                  Misra, 2nd year, BSc (Hons) Computer Science (2024-25)</span></a>
             </li>
             <li>
               <a href="https://www.linkedin.com/in/639himanshuyadav/" rel="noopener" target="_blank"><span>Himanshu
-                  Yadav, BSc (Hons) Computer Science (2024-25)</span></a>
+                  Yadav, 2nd year, BSc (Hons) Computer Science (2024-25)</span></a>
             </li>
           </ul>
           <h3>Mentors</h3>
