FIxed Theory tab

--- a/index.html
+++ b/index.html
@@ -171,8 +171,8 @@
                 </li>
                 <li><b>Interpretation:</b> The result ranges from 0% to 100%:
                   <ul>
-                    <li>1 → identical direction → highly similar</li>
-                    <li>0 → orthogonal → completely dissimilar</li>
+                    <li>100% → identical direction → highly similar</li>
+                    <li>0% → orthogonal → completely dissimilar</li>
                   </ul>
                 </li>
               </ul>
