Implemented changes by Priyanka Mam

--- a/index.html
+++ b/index.html
@@ -141,8 +141,7 @@
 
             <li><b>TF-IDF (Term Frequency – Inverse Document Frequency)</b>
               <ul>
-                <li><b>Purpose:</b> Converts textual data into numerical feature vectors that reflect term
-                  importance in a text relative to a collection.</li>
+                <li><b>Purpose:</b> Measures a term's importance by giving more weight to rare words and less weight to common words that appear across all documents.</li>
                 <li><b>Library Used:</b> sklearn (scikit-learn)</li>
                 <li><b>Term Frequency (TF):</b> Measures how frequently a term t appears in a text:
                   <br><code>TF(t) = (Number of times term t appears in a text) / (Total terms in text)</code>
@@ -927,6 +926,8 @@ if __name__ == "__main__":
           <h3>Mentors</h3>
           <ul class="tools-list">
             <li><span>Prof. Sharanjit Kaur, Department of Computer Science</span></li>
+            <li><span>Ms. Priyanka Sharma, Department of Computer Science</span></li>
+            <li><span>Ms. Nishu Singh, Department of Computer Science</span></li>
           </ul>
           <h3>Tools Used</h3>
           <ul class="tools-list">
