Improved language for IDF

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <li><b>Term Frequency (TF):</b> Measures how frequently a term t appears in a text:
                   <br><code>TF(t) = (Number of times term t appears in a text) / (Total terms in text)</code>
                 </li>
-                <li><b>Inverse Document Frequency (IDF):</b> Reduces the weight of common terms by:
+                <li><b>Inverse Document Frequency (IDF):</b> Reduces the weight of common terms by using the below formula:
                   <br><code>IDF(t) = log(Number of texts / Number of texts with term t)</code>
                 </li>
                 <li><b>TF-IDF Score:</b>
